@@ -317,7 +317,7 @@ StartSendOnKey
 #AVPresetVideo baseline
 #AVOptionVideo flags +global_header
 #
-#AudioCodec libfaac
+#AudioCodec aac
 #AudioBitRate 32
 #AudioChannels 2
 #AudioSampleRate 22050
